--- a/task2/ex6.html
+++ b/task2/ex6.html
@@ -55,7 +55,7 @@
            <b><li class ="list">111</li></b> 
             <li class ="list">222 <a  class="red" href="#">Another link</a></li>
             <li class ="list">333
-                <ul>
+                <ul style="list-style: none;">
                     <b>  <li>red</li></b> 
                     <li>green</li>
                     <li>blue <a  class="red"href="#">Colors link</a></li>
